# xi

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml  screeps.sample.toml
.cargo/: config.toml
examples/: chunk_graph_example.rs  grid_bfs_distances_benchmark.rs  grid_min_cut_benchmark.rs  hashmaps_benchmarks.rs
javascript/: main.js
snippets/: chokepoint_matrix_example.rs  chunk_graph_example.rs  distance_matrix_benchmark.rs  grid_min_cut_benchmark.rs
src/: algorithms.rs  blueprint.rs  config.rs  consts.rs  cost_approximation.rs  creep.rs  creep_error.rs  creeps.rs  defense.rs  error.rs  errors.rs  filling_spawns.rs  fresh_number.rs  game_loop.rs  game_tick.rs  game_time.rs  geometry.rs  global_state.rs  hauling.rs  kernel.rs  lib.rs  logging.rs  maintenance.rs  map_utils.rs  mining.rs  priorities.rs  profiler.rs  random.rs  reserved_creep.rs  resources.rs  role.rs  room_planner.rs  room_state.rs  spawn_pool.rs  spawning.rs  test_process.rs  towers.rs  travel.rs  unchecked_transferable.rs  unwrap.rs  (+2 more)
src/algorithms/: avg_vector.rs  binary_search.rs  chokepoint_matrix.rs  chunk_graph.rs  distance_matrix.rs  distance_transform.rs  grid_bfs_distances.rs  grid_min_cut.rs  interior_matrix.rs  matrix_common.rs  max_boundary_distance.rs  min_cost_weighted_matching.rs  minimal_shortest_paths_tree.rs  mod.rs  room_matrix.rs  room_matrix_slice.rs  shortest_path_by_distance_matrix.rs  shortest_path_by_matrix.rs  vertex_cut.rs  weighted_distance_matrix.rs
src/construction/: build_structures.rs  mod.rs  place_construction_sites.rs  repair_structures.rs  triage_repair_sites.rs
src/creeps/: actions.rs  creep.rs  creep_body.rs  creep_role.rs  creeps.rs  generic_creep.rs  mod.rs  test_creep.rs
src/creeps/actions/: mod.rs  travel_and_pickup.rs  travel_and_transfer.rs
src/economy/: cost_approximation.rs  gather_eco_samples.rs  mod.rs  room_eco_config.rs  room_eco_stats.rs  update_eco_config.rs
src/flags/: claim_room.rs  flag_orders.rs  forced_build.rs  mod.rs
src/geometry/: direction.rs  grid_direction.rs  mod.rs  position_utils.rs  rect.rs  room_coordinate.rs  room_xy.rs
src/hauling/: haul_resources.rs  haul_stats.rs  hauling_stats.rs  issuing_requests.rs  matching_requests.rs  mod.rs  requests.rs  reserving_requests.rs  scheduling_hauls.rs  store_anywhere_or_drop.rs  transfers.rs
src/kernel/: broadcast.rs  cid.rs  condition.rs  kernel.rs  mod.rs  process.rs  process_handle.rs  process_result.rs  runnable.rs  sleep.rs  wait_until_some.rs
src/memory_manager/: mod.rs
src/resource_distribution/: cost_approximation.rs  mod.rs
src/room_maintenance/: fill_structures_with_energy.rs  filling_spawns.rs  maintenance.rs  manage_storage.rs  mine_source.rs  mine_sources.rs  mining.rs  mod.rs  upgrade_controller.rs
src/room_planner/: mod.rs  packed_tile_structures.rs  plan.rs  plan_rooms.rs  planned_tile.rs  roads.rs  stamps.rs
src/room_planning/: mod.rs  packed_tile_structures.rs  plan.rs  plan_rooms.rs  planned_tile.rs  room_planner.rs  stamps.rs
src/room_state/: mod.rs  packed_terrain.rs  room_states.rs  scan.rs  scan_room.rs  scan_rooms.rs  utils.rs
src/room_states/: conversion.rs  mod.rs  packed_terrain.rs  room_state.rs  room_states.rs  scan_room.rs  scan_rooms.rs  utils.rs
src/spawning/: mod.rs  preferred_spawn.rs  reserved_creep.rs  scheduling_creeps.rs  spawn_pool.rs  spawn_room_creeps.rs  spawn_schedule.rs  spawning.rs
src/travel/: mod.rs  nearest_room.rs  step_utils.rs  surface.rs  traffic.rs  travel.rs  travel_spec.rs  travel_state.rs
src/utils/: api_wrappers.rs  assert.rs  avg_vector.rs  cold.rs  debug_mark.rs  decay.rs  find.rs  game_tick.rs  get_object_by_id.rs  local_debug.rs  local_trace.rs  log_err.rs  map_utils.rs  mod.rs  part_extras.rs  permutation.rs  priority.rs  resource_decay.rs  result_utils.rs  return_code_utils.rs  sampling.rs  single_tick_cache.rs  uid.rs  unchecked_transferable.rs  unchecked_withdrawable.rs  unwrap.rs
src/visualization/: mod.rs  room_visualization.rs  show_visualizations.rs
