[package]
name = "xi"
version = "0.0.0"
authors = ["Xilexio <xilexio@xilexio.eu.org>"]
edition = "2021"
repository = "https://github.com/xilexio/xi.git"
homepage = "https://github.com/xilexio/xi"
license-file = "LICENSE"
description = "A Screeps bot."
keywords = ["screeps"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
log = "0.4"
fern = "0.6"
screeps-game-api = { git = "https://github.com/xilexio/screeps-game-api.git" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
num-traits = "0.2"
room_visual_ext = { git = "https://github.com/xilexio/room_visual_ext.git" }
enum-iterator = "1.4.0"
petgraph = "0.6.3"
more-asserts = "0.3.1"
tap = "1.0.1"
rustc-hash = "1.1.0"
thiserror = "1.0.40"
derive_more = "0.99.17"
modular-bitfield = "0.11.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
debug = true

[package.metadata.wasm-pack.profile.release]
# Replace the following with `wasm-opt = ["-O4", "-g"]` (or with whatever flag
# combo you'd like) to enable wasm-opt optimization, which wasm-pack will try to install
# automatically, but must be installed separately on some operating systems
# Removing the `"-g"` will further decrease the size of the binary at but removes function names,
# making stack traces upon panic less useful
wasm-opt = false

[features]
default = []
