[package]
name = "xi"
version = "0.0.0"
authors = ["Xilexio <xilexio@xilexio.eu.org>"]
edition = "2021"
repository = "https://github.com/xilexio/xi.git"
homepage = "https://github.com/xilexio/xi"
license-file = "LICENSE"
description = "A Screeps bot."
keywords = ["screeps"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
log = "0.4"
fern = "0.7.0"
# screeps-game-api = { git = "https://github.com/xilexio/screeps-game-api.git" }
screeps-game-api = "0.22.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
serde_with = "3.11.0"
num-traits = "0.2"
# room_visual_ext = { git = "https://github.com/xilexio/room_visual_ext.git", branch = "dev-screeps-game-api" }
room_visual_ext = "0.1.1"
enum-iterator = "2.0"
petgraph = "0.6.3"
more-asserts = "0.3.1"
rustc-hash = "2.0.0"
thiserror = "2.0.3"
derive_more = "0.99.18"
modular-bitfield = "0.11.2"
futures = "0.3"
parking_lot = "0.12.3"
regex = "1.10.6"
compile-time = "0.2.0"

[dev-dependencies]
rand = "0.8"
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
debug = true

[package.metadata.wasm-pack.profile.release]
# Replace the following with `wasm-opt = ["-O4", "-g"]` (or with whatever flag
# combo you'd like) to enable wasm-opt optimization, which wasm-pack will try to install
# automatically, but must be installed separately on some operating systems
# Removing the `"-g"` will further decrease the size of the binary at but removes function names,
# making stack traces upon panic less useful
#wasm-opt = ["-O4", "--disable-sign-ext", "-g"]
wasm-opt = ["-O2", "--disable-sign-ext", "-g"]

[features]
default = []
mmo = []
memory_wipe = []
separate_messages = []